@@ -1,3 +1,8 @@
+2009-03-28  Sébastien Granjoux  <seb.sfo@free.fr>
+
+	* plugins/scintilla/text-editor-iterable.c:
+	Fix #574607 – Replace function selects text uncorrectly
+
 === 2.26.0.1 ===
 
 2009-03-25  Johannes Schmid  <jhs@gnome.org>
